Split out the io functions into a separate file

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,12 +11,13 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-SOURCES.libt3highlight.la := highlight.c vector.c highlight_shared.c
+SOURCES.libt3highlight.la := highlight.c vector.c highlight_shared.c io.c
 
 LDLIBS.libt3highlight.la += -lt3config
 LDFLAGS.libt3highlight.la += -Lt3config/.libs
 LDFLAGS.libt3highlight.la += `pkg-config --libs libpcre`
 CFLAGS.highlight += -I.objects -DDATADIR='"$(CURDIR)/data"'
+CFLAGS.io += -I.objects -DDATADIR='"$(CURDIR)/data"'
 
 LTTARGETS := libt3highlight.la
 #================================================#
