Add option to ask for the loaded file's name, for comparison purposes

--- a/src/Makefile
+++ b/src/Makefile
@@ -28,6 +28,7 @@ include ../../makesys/rules.mk
 T3NAME := highlight
 include ../../shared/rules.mk
 
+all: | links
 
 .objects/%.bytes: %.schema
 	$(GENOBJDIR)
