Added testsuite to try all distributed languages; add meta script for testsuites

--- a/.hgignore
+++ b/.hgignore
@@ -19,5 +19,5 @@ src.util/valgrind.log
 src/highlight_api.h
 src/highlight_errors.h
 
-testsuite/work
-testsuite/testlog*
+testsuite/highlight/work
+testsuite/highlight/testlog*
