Implemented use-cycle detection; Rewrote the empty-start cycle detection to use depth first search without pushing extra states onto the stack, to prevent reporting non-existing cycles; More work on data structure documentation

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ testsuite/highlight/testlog*
 doc/internals/datastructures.aux
 doc/internals/datastructures.log
 doc/internals/datastructures.pdf
+doc/internals/structs.fig.bak
+doc/internals/structs.pdf
