Renaming of lots of types and members to make it clearer what they are

--- a/doc/internals/Makefile
+++ b/doc/internals/Makefile
@@ -2,7 +2,10 @@ all: datastructures.pdf
 
 datastructures.pdf: datastructures.tex structs.pdf
 	pdflatex $<
-	grep -q rerun datastructures.log && pdflatex $<
+	{ grep -i -q rerun datastructures.log && pdflatex $< ; } || true
 
 %.pdf: %.fig
 	fig2dev -Lpdf $< > $@
+
+clean:
+	rm *.pdf *.log *.aux
