Update man page for t3highlight and use manfmt from now on

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ doc/internals/datastructures.log
 doc/internals/datastructures.pdf
 doc/internals/structs.fig.bak
 doc/internals/structs.pdf
+
+man/output
