--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,23 @@
-src.util/t3config
-doc/doxygen.conf
-doc/DoxygenLayout.xml
-doc/API
-src/highlight_shared.c
-src/.deps
-src/.libs
-src/.objects
-src/libt3highlight.la
-src/t3config
-src/t3highlight
-
-src.util/.deps
-src.util/.objects
-src.util/t3highlight
-src.util/valgrind.log
-src.util/temp
-
-src/highlight_api.h
-src/highlight_errors.h
-
-testsuite/highlight/work
-testsuite/highlight/testlog*
-doc/internals/datastructures.aux
-doc/internals/datastructures.log
-doc/internals/datastructures.pdf
-doc/internals/structs.fig.bak
-doc/internals/structs.pdf
-
-man/output
-libt3highlight-*.tar.bz2
+/src.util/t3config
+/doc/doxygen.conf
+/doc/DoxygenLayout.xml
+/doc/API
+/src/highlight_shared.c
+.deps
+.libs
+.objects
+/src/libt3highlight.la
+/src.util/t3highlight
+/src.util/valgrind.log
+/src.util/temp
+/src/highlight_api.h
+/src/highlight_errors.h
+/testsuite/highlight/work
+/testsuite/highlight/testlog*
+/doc/internals/datastructures.aux
+/doc/internals/datastructures.log
+/doc/internals/datastructures.pdf
+/doc/internals/structs.fig.bak
+/doc/internals/structs.pdf
+/man/output
+/libt3highlight-*.tar.bz2
